Fix line break in post

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,6 +6,10 @@ body {
   display: inline;
 }
 
+.main-content {
+  white-space: pre-line !important;
+}
+
 .blogs {
   display: flex;
   flex-direction: column;
